--- a/2-1/index.html
+++ b/2-1/index.html
@@ -1,4 +1,3 @@
-<!-- トップページHTML -->
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -7,8 +6,10 @@
     <title>sample</title>
 </head>
 <body>
-    <div id="app">hello Vue.js</div>
-    <script src="https;//cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <div id="app">
+        <p>{{ text }}</p>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="./script/script.js"></script>
 </body>
 </html>
